<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shukdash.Unused.DashEntryActivity" >

    <TextView
        android:id="@+id/txtVdashEntryCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash_category" />

    <EditText
        android:id="@+id/edTxtDashEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVdashEntryTask"
        android:layout_below="@+id/txtVdashEntryTask"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_text_here" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDataEntryTakePicVid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edTxtDashEntry"
        android:layout_below="@+id/edTxtDashEntry"
        android:layout_marginTop="29dp"
        android:text="@string/take_a_picture_video" />

    <Button
        android:id="@+id/btnDataEntryPostFB"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDataEntryTakePicVid"
        android:layout_below="@+id/btnDataEntryTakePicVid"
        android:layout_marginTop="49dp"
        android:text="@string/post_to_facebook" />

    <Button
        android:id="@+id/btnDataEntrySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDataEntryPostFB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/txtVdashEntryTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVdashEntryCat"
        android:layout_below="@+id/txtVDashEntryTaskNumber"
        android:layout_marginTop="17dp"
        android:text="@string/dash_task"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtVdashEntryPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVdashEntryCat"
        android:layout_marginTop="27dp"
        android:layout_toRightOf="@+id/edTxtDashEntry"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtVDashEntryTaskNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtVdashEntryPoints"
        android:layout_alignBottom="@+id/txtVdashEntryPoints"
        android:layout_alignLeft="@+id/txtVdashEntryCat"
        android:text="@string/task_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>